--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,15 @@ h1 {
 }
 
 .btn, .jumbotron, .twitter-share-button {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.btn, .twitter-share-button:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 #twitter {
-  margin-top: 3%;  
+  margin-top: 3%;
 }
 
 #tweet-icon {
